fix: improve on readability

--- a/src/scss/components/_buttons-and-items.scss
+++ b/src/scss/components/_buttons-and-items.scss
@@ -166,3 +166,19 @@ button {
     }
   }
 }
+
+[class*="content_"] [class*="navItem_"] {
+  &:active {
+    color: tc.$text-alt;
+    [class*="navItemIcon_"] {
+      color: tc.$text-alt;
+    }
+  }
+  &[class*="selected_"] {
+    color: tc.$text-alt;
+    background-color: gc.$color7;
+    [class*="navItemIcon_"] {
+      color: tc.$text-alt;
+    }
+  }
+}
